--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
+  <main>
+    <header>
+      <img src="images/bg-pattern-card.svg" alt="" srcset="">
+      <div class="profile">
+        <img src="../images/image-victor.jpg" alt="victorImage">
+        <p>
+          Victor Crest
+          <span>26</span>
+        </p>
+        <span>London</span>
+      </div>
+    </header>
+    <article>
+      <ul>
+        <li>
+         80K
+         <span>Followers</span>
+        </li>
+        <li>
+          803K
+          <span>Likes</span>
+        </li>
+        <li>
+          1.4K
+          <span>Photos</span>
+        </li>
+      </ul>
+    </article>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/ericlesbrum" target="_blank">Ericles Brum</a>.
+  </footer>
 </body>
+
 </html>
