--- a/index.html
+++ b/index.html
@@ -9,41 +9,46 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Profile card component</title>
-  <link rel="stylesheet" href="../css/main.css">
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <main>
     <header>
-      <img src="images/bg-pattern-card.svg" alt="" srcset="">
-      <div class="profile">
-        <img src="../images/image-victor.jpg" alt="victorImage">
-        <p>
-          Victor Crest
-          <span>26</span>
-        </p>
-        <span>London</span>
-      </div>
+      <img src="images/bg-pattern-card.svg" alt="bg-pattern-card">
     </header>
-    <article>
+    <div class="profile">
+      <img src="images/image-victor.jpg" alt="victor">
+      <p>
+        Victor Crest
+        <span>26</span>
+        <span>London</span>
+      </p>
       <ul>
         <li>
-         80K
-         <span>Followers</span>
+          80K
+          <span>
+            Followers
+          </span>
         </li>
         <li>
           803K
-          <span>Likes</span>
+          <span>
+            Likes
+          </span>
         </li>
         <li>
           1.4K
-          <span>Photos</span>
+          <span>
+            Photos
+          </span>
         </li>
       </ul>
-    </article>
+    </div>
   </main>
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/ericlesbrum" target="_blank">Ericles Brum</a>.
   </footer>
 </body>
